--- a/templates/index.html
+++ b/templates/index.html
@@ -155,37 +155,19 @@
             
         }
 
-        .shimmer-button {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0.8rem 1.5rem;
-      font-size: 1rem; /* Base font size */
-      font-weight: 500; /* Medium font weight */
-      line-height: 0.4; /* Tight line height */
-      text-align: center;
-      text-transform: uppercase;
-      color: #fff; /* White text */
-      background: linear-gradient(90deg, #000000, #000000, #ffffff); /* Example shimmer gradient */
-      background-size: 200% 100%;
-      border-radius: 12px; /* Rounded corners */
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); /* Shadow */
-      border: none;
-      cursor: pointer;
-      overflow: hidden;
-      position: relative;
-      animation: shimmer 3.0s infinite;
-    }
-
-    /* Shimmer effect */
-    @keyframes shimmer {
-      0% {
-        background-position: 200% 0;
-      }
-      100% {
-        background-position: -200% 0;
-      }
-    }
+        button {
+            background-color: #007BFF;
+            color: white;
+            padding: 5px 10px;
+            font-size: 1em;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: 0.5s;
+        }
+        button:hover {
+            background-color: #505050;
+        }
 
     /* Responsive text size */
     @media (min-width: 1024px) {
@@ -281,7 +263,7 @@
         position: fixed;
       top: 20px;
       right: 20px;
-      padding: 10px 10px;
+      padding: 8px 10px;
       background-color: #007bff;
       color: #fff;
       border: none;
@@ -362,10 +344,7 @@
 
     <div>
     <input type="text" inputmode="email" id="userPrompt" placeholder="Enter prompt(e.g.'Tell me a joke')">
-    <button class="shimmer-button",id="submitPromptButton">Submit
-        <span>
-        </span>
-    </button>
+    <button id="submitButton">Submit</button>
 
     <div id="joke"></div>
     <div id="end-dialogue"></div>
