Submit button logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -166,15 +166,9 @@
             transition: 0.5s;
         }
         button:hover {
-            background-color: #505050;
+            background-color: #0056b3;
         }
 
-    /* Responsive text size */
-    @media (min-width: 1024px) {
-      .shimmer-button {
-        font-size: 1.125rem; /* lg:text-lg */
-      }
-    }
      /* Particles styles */
      .particles {
       position: absolute;
@@ -344,7 +338,7 @@
 
     <div>
     <input type="text" inputmode="email" id="userPrompt" placeholder="Enter prompt(e.g.'Tell me a joke')">
-    <button id="submitButton">Submit</button>
+    <button id="submitPromptButton">Submit</button>
 
     <div id="joke"></div>
     <div id="end-dialogue"></div>
